kubernetes-ashtonc-home/k8s/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: ashtonc-home
spec:
  replicas: 3
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: ashtonc-home
    spec:
      containers:
      - name: ashtonc-home
        image: nginx:alpine
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - "wget https://storage.googleapis.com/ashtonc.com/deploy/nginx.conf -O /etc/nginx/conf.d/default.conf && \
            wget https://storage.googleapis.com/ashtonc.com/deploy/proxy.conf -O /etc/nginx/proxy.conf && \
            nginx -g 'daemon off;'"
        ports:
        - containerPort: 8000
