kubernetes-ashtonc-home/k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ashtonc-home
  labels:
    app: ashtonc-home
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: ashtonc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ashtonc-home
          servicePort: 80
  - host: www.ashtonc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ashtonc-home
          servicePort: 80
  tls:
  - hosts:
    - ashtonc.com
    - www.ashtonc.com
    secretName: ashtonc-home-tls
